# doodaboo

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
.github/workflows/: ci.yml  release.yml  scheduled.yml
cli/: cli.test.ts  index.ts  util.test.ts  util.ts
cli/commands/: dash.test.ts  dash.ts  export.ts  hook.ts  import.ts  init.ts  playbook.ts  plugin.ts  post.ts  project.ts  report.test.ts  report.ts  serve.ts  status.ts  task.ts
docs/: api.md  cli.md  desktop.md  ops.md  plugins.md
e2e/: dashboard.spec.ts  helpers.ts  playbooks.spec.ts  post-loop.spec.ts  posts.spec.ts  projects.spec.ts  settings.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src/app/: apple-icon.tsx  error.tsx  global-error.tsx  globals.css  icon.tsx  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: AppShell.tsx  CommandPalette.tsx  DueBadge.tsx  EmptyState.tsx  KanbanBoard.tsx  NewTaskModal.tsx  PageHeader.tsx  PriorityIcon.tsx  SaveIndicator.tsx  ShortcutsModal.tsx  Sidebar.tsx  StatusIcon.tsx  StoreHydration.tsx  TaskList.tsx  ThemeManager.tsx  ToastProvider.tsx
src/lib/: api.test.ts  api.ts  autosave.test.ts  autosave.ts  hooks-generator.test.ts  hooks-generator.ts  hooks.ts  mutations.test.ts  mutations.ts  myDay.test.ts  myDay.ts  playbooks.test.ts  playbooks.ts  seed.test.ts  seed.ts  store.ts  tauri-storage.test.ts  (+9 more)
(+55 files in other folders)
